<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:tools="http://schemas.android.com/tools" tools:locale="en"
    tools:ignore="MissingTranslation">


	<string name="app_name">Calculator </string>
	<string name="action_settings">Settings</string>
	<string name="First_Line">0</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="zero">0</string>
	<string name="Multiply">*</string>
	<string name="Divide">/</string>
	<string name="Add">+</string>
	<string name="Subtract">-</string>
	<string name="Clear">CE</string>
	<string name="Equals">=</string>
	<string name="Decimal">.</string>
	<string name="Negative">n</string>

</resources>
