<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calculator.MainActivity"
    tools:ignore="MergeRootFrame" 
    android:orientation="vertical">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="5"
    android:orientation="vertical" >
    
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="right"
           />
<LinearLayout
   	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="right">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="50sp"
            android:textStyle="bold"/>

         <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            /> 
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="30sp"
            android:textStyle="bold" 
            android:layout_gravity="right"/>
</LinearLayout>
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="30sp"
            android:textColor="#ff0000"
            android:layout_gravity="right"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" 
           >

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/one"
                android:textSize="30sp" 
                android:padding="0sp"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/two"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/three"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/Clear"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" 
            >

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/four"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/five"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/six"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/Divide"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            >

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/seven"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/eight"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/nine"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/Multiply"
                android:textSize="30sp" />
        </LinearLayout>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" 
            >

            <Button
                android:id="@+id/btnNegative"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".125"
                android:text="@string/Negative" 
                android:textSize="30sp"
                android:paddingLeft="-50dip"
                android:paddingRight="-50dip"/>
            
            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".125"
                android:text="@string/Decimal" 
                android:textSize="30sp"
                android:paddingLeft="-50dip"
                android:paddingRight="-50dip"/>

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/zero"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/Add"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/Subtract"
                android:textSize="30sp" />
        </TableRow>

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:text="@string/Equals"
            android:textSize="30sp"
            android:layout_weight="1" />
        
</LinearLayout>
</FrameLayout>
